
WhiteCore-Sim (Dev) 
Rowan D <greythane@gmail.com>
Fly-Man- <fly.man.opensim@gmail.com>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Apr 8 - Fly-Man
* Updated Library file with origin of some of the files.

Apr 7 - Greythane
* SceneManager
  - Add public CreateRegion() to allow creation of region programatically.
* FileBasedSimulation
  - Minor documentary updates
* Add bin/libraries.version detailing current version details of libraries

Apr 2 - Fly-Man
* Cleaned up the remaining INI files that still had the old WhiteCoreServerConfiguration in them

* Framework.ConsoleFramework
	- Added Date to the log files so you can see which date something occurred.

Mar 31 / Apr 1st - Greythane
* SceneManager - additional commands
	- "show objects" - Display a list of objects in the currently selected scene
	- "resize object" - Change the scale of a named object 
	- "rotate region" - Rotates ( 2D, x,y only) all region objects around a center point (default center of region)
    - "scale region" - Scales all region objects by the specified amount
    - "reposition region" - Move region objects by the specified amounts (x,y,z) (Alternative to 'offset region prims')
    - "clear region" - Clear the region of objects leaving the current terrain
* TerrainChannel
    - Additional helper functions

Mar 28 - Greythane
* LSL-Api /LSL-Types
	- increase float equality difference to "0.0000005" as LSL_Float types are only to six decimal places
	- SetPrimParams - Correct PRIM_POSITION position update to remove incorrect additional offset 
	   (originally reported by Eamon Mayo who also supplied a correction (Aurora))

Mar 26 - Greythane
* LocalGridConnector
  - if no valid data source is available, don't register the local service 
  	( causes null references if called from the sim console when in grid mode )
* SceneManager - Show region <name> command
  - correct call to get region list so that is operates correctly in both standalone and grid mode