@@ -39,6 +39,10 @@ using OpenMetaverse;
 using System;
 using System.Collections.Generic;
 using System.Threading;
+using System.Reflection;
+
+[assembly: AssemblyVersion("0.9.1")]
+[assembly: AssemblyFileVersion("0.9.1")]
 
 namespace WhiteCore.BotManager
 {
