@@ -38,7 +38,11 @@ using Nini.Config;
 using OpenMetaverse;
 using System;
 using System.Collections.Generic;
+using System.Reflection;
 using System.Threading;
+
+[assembly: AssemblyVersion("0.9.1")]
+[assembly: AssemblyFileVersion("0.9.1")]
 
 namespace WhiteCore.Region
 {
