@@ -36,6 +36,10 @@ using WhiteCore.Framework.Services;
 using Nini.Config;
 using System;
 using System.Collections.Generic;
+using System.Reflection;
+
+[assembly: AssemblyVersion("0.9.1")]
+[assembly: AssemblyFileVersion("0.9.1")]
 
 namespace WhiteCore.Services.DataService
 {
